# GAIC-Thesis

./: .env.example  .gitignore  .gitmodules  README.md  analysis_v1_results.md  experiment_plan.md  expose.md  feedback.md  main.py  methodology.md  new_expose.md  pyproject.toml  todo.md
config/: paths.py
config/experiments/: embedding_mistral_7b.toml  experiment_config.toml  groq_config.toml  ollama_llama3.1:8b_config.toml  ollama_llama3.1:8b_config_guidelines.toml  portkey_config.toml  portkey_gpt4.1_config.toml  portkey_gpt4.1_config_30.toml  portkey_gpt4.1_config_full_30.toml  portkey_gpt4.1_config_guidelines.toml  test_config.toml  (+15 more)
docs/: Expose_v1.md  QUICK_REFERENCE.md  experiment_diary_2026-03-11.md  expose.md  learnings.md  paper.md  task.md
experiments/: attention_analysis_demo.ipynb  cross_guideline_analysis.ipynb  dataset_overview.md  eda.ipynb  experiments_summary.md  guideline_analysis.ipynb
gaic/: analyze_results.py  contamination_test.py  context_quality_experiment.py  cross_guideline_experiment.py  document_context.py  embedding_experiment.py  embeddings.py  helper.py  manipulation_comparison_experiment.py  run_model_configs.py  shuffle_experiment.py  submission_inference.py  unified_experiment.py  zero_shot.py  zero_shot_manipulation.py  zero_shot_with_guidelines.py
ma-widera-thesis/: .latexmkrc  README.md  abstract.tex  acknowledgements.tex  anhang.tex  cd.tex  intro.tex  latex-hilfe.tex  master.tex  thesis_meta.tex
scripts/: extract_shuffle_errors.py  test_logprobs.py
tests/: test_submission_inference.py
thesis/: combined_results_table.tex  dev_evaluation_llm.txt  knn_baseline.md  mark_crossdataset_transfer_table.tex  thesis.md
(+8567 files in other folders)
