[project]
name = "gaic-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openai>=2.16.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.1",
]
[tool.setuptools]
packages = ["gaic"]

[tool.uv]
package = true
