[project]
name = "gaic-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "kreuzberg>=4.0.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openai>=2.16.0",
    "pandas>=2.3.3",
    "pip>=26.0",
    "pydantic>=2.0.0",
    "portkey-ai>=1.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "torch>=2.10.0",
    "tqdm>=4.67.1",
    "transformers>=5.0.0",
    "umap-learn>=0.5.7",
]
[tool.setuptools]
packages = ["gaic", "gaic.preprocessing", "config"]

[tool.uv]
package = true
